--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
     <meta charset="utf-8" />
-    <title>Программа ТВ</title>
+    <title>РџСЂРѕРіСЂР°РјРјР° РўР’</title>
 
     <link rel="stylesheet" href="css/table-tv.css">
 </head>
 <body>
-    <h1 class="header">Программа ТВ </h1>
+    <h1 class="header">РџСЂРѕРіСЂР°РјРјР° РўР’ </h1>
     <div class="control-panel">
         <div class="filter">
-            <label class="filter__label">Дни недели: </label>
+            <label class="filter__label">Р”РЅРё РЅРµРґРµР»Рё: </label>
             <div class="filter-day"></div>
-            <label class="filter__label">Тип программы: </label>
+            <label class="filter__label">РўРёРї РїСЂРѕРіСЂР°РјРјС‹: </label>
             <div class="filter-type ">
                 <select class="filter-type__select control-style" onchange='typeChange(this)'></select>
             </div>
